KubernetesYAMLResources/Networking Resources/Ingress/ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-enterprise-ingress
  namespace: production
  annotations:
    # Tell K8s which controller to use (Nginx is the tech industry standard)
    kubernetes.io/ingress.class: "nginx"
    # Automatic SSL redirection
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Limit the size of file uploads
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  # TLS/SSL Configuration
  tls:
  - hosts:
    - api.company.com
    secretName: company-ssl-cert # References a K8s Secret containing the SSL cert
    
  rules:
  - host: api.company.com  # Host-based routing
    http:
      paths:
      - path: /v1/payments # Path-based routing
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 80
      - path: /v1/users
        pathType: Prefix
        backend:
          service:
            name: user-profile-service
            port:
              number: 80
